# CS405

./: .gitignore  README.md
CheckersAIBrain/: CMakeLists.txt  CMakeSettings.json  CheckersAIBrain.cpp  CheckersAIBrain.h
HW1 Basic Checkers/: CheckersStats.txt  HW1 Basic Checkers.sln  HW1 Basic Checkers.vcxproj  HW1 Basic Checkers.vcxproj.filters  OverallCheckersStats.txt  RawGameData.txt  basicCheckersMain.cpp  board.cpp  board.h  game.cpp  game.h  piece.cpp  piece.h  stats.cpp  stats.h
HW2 Searching/: HW2 Searching.sln  HW2 Searching.vcxproj  HW2 Searching.vcxproj.filters  basicCheckersMain.cpp  board.cpp  board.h  game.cpp  game.h  menu.cpp  menu.h  stats.cpp  stats.h
HW3 MCTS/: CheckersIPC.h  HW3 MCTS.sln  HW3 MCTS.vcxproj  HW3 MCTS.vcxproj.filters  board.cpp  board.h  checkersMain.cpp  game.cpp  game.h  gameLogs.cpp  gameLogs.h  menu.cpp  menu.h
